<?xml version="1.0"?>
<package format="2">
  <name>ros_neo_arduino</name>
  <version>0.0.0</version>
  <description>Support for Arduino ros_neo_arduino node</description>
  <maintainer email="dave.barnett@redsensors.com">Dave Barnett</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
